# face-emoji-streamlit

./: .gitignore  Readme.md  const.py  get_emoji_image.py  get_font_ttf.py  initialize.py  models.py  packages.txt  pyproject.toml  requirements.txt  streamlit_app.py  type.py
fes/: const.py  face_annotate.py  models.py
